[gd_scene load_steps=11 format=3 uid="uid://bti610xcgtmrs"]

[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueCollection/que_collection_control.gd" id="1_5admy"]
[ext_resource type="Texture2D" uid="uid://io35wpu802fp" path="res://assets/Sprites/UI/BackPatches/Patch_64_12.png" id="2_85q5f"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueCollection/que_display_container.gd" id="3_pi72h"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueCollection/que_mini_slot_icon.gd" id="4_kcteh"]
[ext_resource type="Texture2D" uid="uid://cg1yo6bhpalea" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_slot.png" id="5_etud8"]
[ext_resource type="Texture2D" uid="uid://1brfy81pji75" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_gap_slot.png" id="6_22ht0"]
[ext_resource type="Texture2D" uid="uid://bdn528i15d122" path="res://data/Actions/Attack/TestSword.png" id="7_c3jjb"]
[ext_resource type="Texture2D" uid="uid://coojsfckia2jk" path="res://Scenes/Combat/UiNodes/QueDisplay/UnknownPageSlotIcon.png" id="8_osnd3"]
[ext_resource type="Texture2D" uid="uid://b4rsuuvrkee14" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_dead_slot.png" id="9_mpkvf"]
[ext_resource type="Texture2D" uid="uid://seyoqmlx4o78" path="res://assets/Sprites/UI/QueInputAndDisplay/mini_page_slot_highlight.png" id="10_r2vif"]

[node name="Container" type="Container" node_paths=PackedStringArray("ques_container", "color_bar", "premade_que_container", "background", "inner_container")]
custom_minimum_size = Vector2(80, 40)
offset_right = 80.0
offset_bottom = 40.0
script = ExtResource("1_5admy")
ques_container = NodePath("VBoxContainer")
color_bar = NodePath("Control/ColorRect")
premade_que_container = NodePath("VBoxContainer/QueContainer")
background = NodePath("Background")
inner_container = NodePath("VBoxContainer")
margin_override = 4

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource("2_85q5f")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="Control" type="Control" parent="."]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
custom_minimum_size = Vector2(2, 40)
layout_mode = 2
offset_left = 38.0
offset_top = 2.0
offset_right = 40.0
offset_bottom = 42.0
color = Color(1, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show"

[node name="QueContainer" type="BoxContainer" parent="VBoxContainer" node_paths=PackedStringArray("portrait", "slot_button_prefab", "slots_container", "name_label")]
layout_mode = 2
script = ExtResource("3_pi72h")
portrait = NodePath("PortraitTextureRect")
slot_button_prefab = NodePath("PageSlotPrefab")
slots_container = NodePath("SlotsContainer")
name_label = NodePath("PortraitTextureRect/Label")

[node name="PortraitTextureRect" type="TextureRect" parent="VBoxContainer/QueContainer"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/QueContainer/PortraitTextureRect"]
visible = false
z_index = 1
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "ActorName"

[node name="PageSlotPrefab" type="Control" parent="VBoxContainer/QueContainer" node_paths=PackedStringArray("background", "gap_icon", "_page_icon", "highlight", "dead_icon", "unknown_icon")]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
script = ExtResource("4_kcteh")
background = NodePath("PageSlot")
gap_icon = NodePath("GapTextureRect")
_page_icon = NodePath("Icon")
highlight = NodePath("Highlight")
dead_icon = NodePath("DeadIcon")
unknown_icon = NodePath("UnknownIcon")

[node name="PageSlot" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
size_flags_vertical = 4
texture = ExtResource("5_etud8")

[node name="GapTextureRect" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_22ht0")

[node name="Icon" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
visible = false
layout_mode = 2
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_c3jjb")
expand_mode = 1

[node name="UnknownIcon" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("8_osnd3")

[node name="DeadIcon" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("9_mpkvf")

[node name="Highlight" type="TextureRect" parent="VBoxContainer/QueContainer/PageSlotPrefab"]
visible = false
layout_mode = 0
offset_right = 32.0
offset_bottom = 32.0
texture = ExtResource("10_r2vif")

[node name="SlotsContainer" type="HBoxContainer" parent="VBoxContainer/QueContainer"]
layout_mode = 2
